--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 Use ArrowLeft/ArrowRight to select vertical/horizontal split.
 Green indicates correct answer, red indicates wrong answer.</div>
 	<button class="button" id="next" onclick="nextImage()">Next Image</button>
-	<button class="button"><a href="https://helenxzd.github.io/Introscreen/#/Introscreen/intro3">Next Stage</a></button>
+	<div id="nextstage"><button class="button"><a href="https://helenxzd.github.io/Introscreen/#/Introscreen/intro3">Next Stage</a></button></div>
 
 </div>
 
