--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<!-- input type="number" placeholder="input texture duration" id="duration" name="duration" min="200" step="100"><span id="ms">ms  </span> -->
 	</h1>
 
-	<div class="instruction">These two patterns are the components of the bipartite textures. The main test images will be based on these two patterns. Once you are familar with the patterns, click 'Move to Main Stage' to continue.</div>
-	<div><button class="button"><a href="https://helenxzd.github.io/Introscreen/#/Introscreen/intro3">Move to Main Stage</a></button></div>
+	<div class="instruction">These two patterns are the components of the bipartite textures. The main test images will be based on these two patterns. Once you are familar with the patterns, click 'Move to Main Test' to continue.</div>
+	<div><button class="button"><a href="https://helenxzd.github.io/Introscreen/#/Introscreen/intro3">Move to Main Test</a></button></div>
 
 </div>
 
