modified background color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title>Test Stripe Metamers</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
-	</style>
 </head>
 <body>
 
@@ -13,7 +12,8 @@
 	<!-- input type="number" placeholder="input texture duration" id="duration" name="duration" min="200" step="100"><span id="ms">ms  </span> -->
 	</h1>
 
-	<div class="instruction">These two patterns are the components of the bipartite textures. The main test images will be based on these two patterns. Once you are familar with the patterns, click 'Move to Main Test' to continue.</div>
+	<div class="instruction">These two patterns are the components of the bipartite textures. The main test images will be based on these two patterns. Once you are familar with the patterns, click 'Move to Main Test' to continue.
+	The viewing distance should be 5.8 times the image size (initially indicated as an empty square frame).</div>
 	<div><button class="button"><a href="https://helenxzd.github.io/Introscreen/#/Introscreen/intro3">Move to Main Test</a></button></div>
 
 </div>
