--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<div class="instruction">These two patterns are the components of the bipartite textures. The main test images will be based on these two patterns. Once you are familar with the patterns, click 'Move to Main Test' to continue.
 	The viewing distance should be 5.8 times the image size (initially indicated as an empty square frame).</div>
-	<div><button class="button"><a href="https://helenxzd.github.io/Introscreen/#/Introscreen/intro3">Move to Main Test</a></button></div>
+	<div><button class="button"><a href="https://KaixuanZ.github.io/Introscreen/#/Introscreen/intro3">Move to Main Test</a></button></div>
 
 </div>
 
