--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 <div class="imageShow" id="imageShow">
 
-	<img src='3-level.png' class="patterns" 
+	<img src='decoded.png' class="patterns"
 	 id="patterns">
 
-	<img src='17-level.png' class="patterns" 
+	<img src='renoised.png' class="patterns"
 	id="patterns">
 
 </div>
